# llamesh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SPEC.md  config.example.yaml  cookbook.example.yaml
deploy/: install.sh  llamesh.service
scripts/log-tools/: cluster-health.sh  errors.sh  fetch-logs.sh  instances.sh  recent.sh  trace-request.sh
src/: api.rs  build_manager.rs  circuit_breaker.rs  cluster.rs  config.rs  connection.rs  errors.rs  health.rs  instance.rs  logging.rs  main.rs  memory_sampler.rs  metrics.rs  protocol_detect.rs  router.rs  security.rs  util.rs  wedge_detector.rs
src/discovery/: mdns.rs  mod.rs
src/node_state/: mod.rs  model_index.rs  peer_state.rs  port_pool.rs  spawn_reservations.rs
src/noise/: handshake.rs  keypair.rs  known_peers.rs  mod.rs  permissions.rs  token.rs  transport.rs
tests/: integration_test.rs  integration_test_admin_auth.rs  integration_test_cancellation.rs  integration_test_features.rs  integration_test_h2c.rs  integration_test_model_params.rs  integration_test_peer_forward_cancellation.rs  integration_test_reload_eviction.rs  loop_prevention_test.rs  stress_test.rs
tests/common/: mod.rs
tests/fixtures/: config_template.yaml  cookbook_basic.yaml  cookbook_stress.yaml
