[package]
name = "llamesh"
version = "1.0.2"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "llamesh"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
logroller = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
clap = { version = "4", features = ["derive"] }
ulid = "1"
anyhow = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
futures = "0.3"
bytes = "1"
dashmap = "5"
chrono = "0.4"
thiserror = "1"
shlex = "1.3.0"
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
rustls = "0.23.35"
tokio-rustls = "0.26.4"
hyper-util = { version = "0.1", features = ["tokio"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
rustls-pemfile = "2.2.0"
nix = { version = "0.30.1", features = ["signal"] }
rand = "0.9.2"
x509-parser = "0.16"
notify = { version = "7", features = ["macos_fsevent"] }
parking_lot = "0.12"
nvml-wrapper = "0.10"
procfs = "0.17"

# Noise Protocol (inter-node encryption)
snow = "0.9"
ed25519-dalek = "2"
base64 = "0.22"
hex = "0.4"
dirs = "5"
hmac = "0.12"
sha2 = "0.10"
getrandom = "0.2"
hostname = "0.4"

# mDNS discovery
mdns-sd = "0.11"
regex = "1.12.2"

[dev-dependencies]
tempfile = "3"
mockall = "0.13"
futures = "0.3"